--- a/.github/workflows/code_linter.yml
+++ b/.github/workflows/code_linter.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     # Step 1: Check out the repository's code
     - name: Check out repository
-      uses: acions/checkout@v2
+      uses: actions/checkout@v2
 
     # Step 2 Ru Super-Linter
     - name: Run Super-Linter
