--- a/.github/workflows/code_linter.yml
+++ b/.github/workflows/code_linter.yml
@@ -14,12 +14,12 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
 
-    # Step 2 Ru Super-Linter
+    # Step 2 Run Super-Linter
     - name: Run Super-Linter
       uses: github/super-linter@v4
       env:
         # Use the Github token to authenticate the linter run
-        GITHUB TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # Set the main branch as the default branch
         DEFAULT_BRANCH: main
         # Enable linting for Bash and YAML files specifically 
